--- a/ProAcc/Views/Customers/Index.cshtml
+++ b/ProAcc/Views/Customers/Index.cshtml
@@ -49,7 +49,7 @@
                 &nbsp;&nbsp;<a class="fa fa-edit" data-toggle="tooltip" data-placement="top" title="Edit!" href="@Url.Action("GetCustomerById","Customers", new { id = item.Customer_ID })"></a>
                 @*<a href="#" id="btnEdit" class="editCustomer fa fa-edit"></a><input type="hidden" value="@item.Customer_ID" /> |*@
                 <a href="#" class="btnDelete fa fa-trash"></a><input type="hidden" value="@item.Customer_ID" />
-                <a href="#" class="btnDownload fa fa-download"></a><input type="hidden" value="@item.Customer_ID" />
+                @*<a href="#" class="btnDownload fa fa-download"></a><input type="hidden" value="@item.Customer_ID" />*@
             </td>
         </tr>
         }
