--- a/ProAcc/Views/IssueTrack/Index.cshtml
+++ b/ProAcc/Views/IssueTrack/Index.cshtml
@@ -92,7 +92,7 @@
 
 
 <script>
-    var status = "{ In progress:In progress; Completed:Completed;On hold:On hold;Resolved waiting for customer conformation:Resolved waiting for customer conformation;Re-opened:Re-opened;}";
+    var status = 'In progress:In progress; Completed:Completed;On hold:On hold;Resolved waiting for customer conformation:Resolved waiting for customer conformation;Re-opened:Re-opened;'
 
     var EndDate = function (element, options) {
         var ID = options.rowId;
@@ -121,47 +121,50 @@
             height: 280,
             colModel: [
                 {
-                    label: 'Issue Id', name: 'RunningID', index: 'Issuetrack_Id', width: 150,
+                    label: 'Issue Id', name: 'IssueID', index: 'IssueID', width: 100,align: "center",
                    
                 },
-                { label: 'Issuetrack_Id', name: 'Issuetrack_Id', index: 'Issuetrack_Id', width: 150,hidden:true},
-                { label: 'IssueName', name: 'IssueName', index: 'IssueName', width: 150, editable: false },
+                { label: 'Issuetrack_Id', name: 'Issuetrack_Id', index: 'Issuetrack_Id', width: 150,hidden:true,align: "center",},
+                
                 {
-                    label: 'Phase', name: 'PhaseID', index: 'PhaseID', width: 150, editable: false,
+                    label: 'Phase', name: 'PhaseID', index: 'PhaseID', width: 150, editable: false,align: "center",
                      edittype: 'select', formatter: 'select',
                     editoptions: {
                         value: GetPhaseDropDown()
                     }
                 },
-                { label: 'Task', name: 'Task', index: 'Task', width: 150, editable: false },
+                { label: 'Task', name: 'Task', index: 'Task', width: 150, editable: false ,align: "center"},
                 {
-                    label: 'Instance', name: 'ProjectInstance_Id', index: 'ProjectInstance_Id', width: 150, editable: false,hidden:true,
+                    label: 'Instance', name: 'ProjectInstance_Id', index: 'ProjectInstance_Id', width: 150, editable: false,hidden:true,align: "center",
                     edittype: 'select', formatter: 'select',
                     editoptions: {
                         value: GetInstanceDropDown()
                     }
                 },
-                { label: 'Start Date', name: 'StartDate', index: 'StartDate', width: 150, editable: false, formatter: "date", formatoptions: { newformat: "d/m/Y" } },
+                { label: 'IssueName', name: 'IssueName', index: 'IssueName', width: 150, editable: false ,align: "center"},
                 {
-                    label: 'End Date', name: 'EndDate', index: 'EndDate', width: 150, editable: true, formatter: "date", formatoptions: { newformat: "d/m/Y" },
+                    label: 'Status', name: 'Status', index: 'Status', width: 150, editable: true, edittype: "select",
+                    editoptions: {
+                       value: "In progress: In progress; Completed: Completed; On hold: On hold; Resolved waiting for customer conformation: Resolved waiting for customer conformation; Re- opened: Re - opened",
+                    }
+                },
+                { label: 'Start Date', name: 'StartDate', index: 'StartDate', width: 150, editable: false, formatter: "date", align: "center",formatoptions: { newformat: "d/m/Y" } },
+                {
+                    label: 'End Date', name: 'EndDate', index: 'EndDate', width: 150, editable: true, formatter: "date",align: "center", formatoptions: { newformat: "d/m/Y" },
                     editoptions: { dataInit: EndDate },
                 },
                 {
-                    label: 'AssignedTo', name: 'AssignedTo', index: 'AssignedTo', width: 150, editable: false,
+                    label: 'AssignedTo', name: 'AssignedTo', index: 'AssignedTo', width: 150, editable: false,align: "center",
                      edittype: 'select', formatter: 'select',
                     editoptions: {
                         value: GetUserDropDown()
                     }
 
-                },
+                },                
+                { label: 'Comment', name: 'Comments', index: 'Comments', width: 150, editable: false,align: "center" },
                 {
-                    label: 'Status', name: 'Status', index: 'Status', width: 150, editable: true, edittype: "select",
-                    editoptions: {
-                        value: status,
-                    }
+                    label: 'Comment', name: 'cmt', index: ' ', width: 150, editable: true, hidden: false,
                 },
-                { label: 'Comment', name: 'Comments', index: 'Comments', width: 150, editable: false },
-                { label: 'Comment', name: 'cmt', index: ' ', width: 150, editable: true },
 
                 {
                     label: 'Action', name: 'myac', width: 80, fixed: true, sortable: false, resize: false, formatter: 'actions',
@@ -174,6 +177,7 @@
                             for (var i = 0; i < ids.length; i++) {
                                 $('#jEditButton_' + ids[i]).hide();
                             }
+
                         },
                         afterSave: function (rowid, response, postdata, options) {   
                              var ids = jQuery("#mytable2").jqGrid('getDataIDs');
@@ -193,7 +197,7 @@
 
             rowNum: 10,
             viewrecords: true,
-            rowList: [10, 20, 30],
+           // rowList: [10, 20, 30],
             pager: '#pager2',
             sortable: true,
             sortname: 'Name',
